solve day 17 - part 2