@@ -1,64 +1,60 @@
 package aoc.y2023;
 
-import static aoc.util.Direction.down;
-import static aoc.util.Direction.right;
-
+import static java.lang.Character.getNumericValue;
 import static java.util.stream.Collectors.toMap;
 
 import aoc.AoC;
 import aoc.util.Direction;
 import aoc.util.Position2D;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.PriorityQueue;
 import java.util.Set;
 
 public class Day17 implements AoC {
 
-    private int[][] values;
+    private Position2D start;
+    private Position2D end;
     private Map<Position2D, Integer> heatLossMap;
 
     @Override
     public void load(final String input) {
-        this.values =
-                input.lines()
-                        .map(l -> l.chars().map(Character::getNumericValue).toArray())
-                        .toArray(int[][]::new);
-        heatLossMap = Position2D.generate(values).collect(toMap(p -> p, p -> p.get(values)));
+        final char[][] chars = input.lines().map(String::toCharArray).toArray(char[][]::new);
+        this.start = Position2D.of(0, 0);
+        this.end = Position2D.of(chars[0].length - 1, chars.length - 1);
+        this.heatLossMap =
+                Position2D.generate(chars)
+                        .collect(toMap(p -> p, p -> getNumericValue(p.get(chars))));
     }
 
     @Override
     public long getPart1Solution() {
-        final Position2D start = Position2D.of(0, 0);
-        final Position2D end = Position2D.of(values[0].length - 1, values.length - 1);
-        return shortestPath(start, end);
+        return shortestPath(1, 3);
     }
 
     @Override
     public long getPart2Solution() {
-        return 0L;
+        return shortestPath(4, 10);
     }
 
-    private long shortestPath(final Position2D start, final Position2D end) {
-
+    private long shortestPath(final int minSteps, final int maxSteps) {
         final Map<GraphNode, Long> cost = new HashMap<>();
         final Set<GraphNode> visited = new HashSet<>();
         final PriorityQueue<GraphNode> unvisited =
                 new PriorityQueue<>(Comparator.comparing(cost::get));
 
-        cost.put(new GraphNode(start, down, 0), 0L);
-        cost.put(new GraphNode(start, right, 0), 0L);
+        cost.put(new GraphNode(start, Direction.down), 0L);
+        cost.put(new GraphNode(start, Direction.right), 0L);
         unvisited.addAll(cost.keySet());
 
         while (!unvisited.isEmpty()) {
             final GraphNode node = unvisited.poll();
-            final Position2D position = node.position();
 
-            if (position.equals(end)) {
+            if (node.position().equals(end)) {
                 return cost.get(node);
             }
 
@@ -68,42 +64,37 @@ public class Day17 implements AoC {
 
             visited.add(node);
 
-            for (final Direction newDirection :
-                    Arrays.asList(
-                            node.direction(),
-                            node.direction().rotate90(),
-                            node.direction().rotate90Reverse())) {
+            for (final Direction direction :
+                    List.of(node.direction().rotate90(), node.direction().rotate90Reverse())) {
 
-                if (newDirection == node.direction() && node.directionCount() >= 3) {
-                    continue;
+                Position2D newPosition = node.position();
+                long newCost = cost.get(node);
+
+                for (int step = 1; step <= maxSteps; step++) {
+                    newPosition = newPosition.move(direction);
+                    if (!heatLossMap.containsKey(newPosition)) {
+                        break;
+                    }
+
+                    newCost += heatLossMap.get(newPosition);
+
+                    if (step < minSteps) {
+                        continue;
+                    }
+
+                    final GraphNode newNode = new GraphNode(newPosition, direction);
+                    if (cost.containsKey(newNode) && cost.get(newNode) < newCost) {
+                        continue;
+                    }
+
+                    cost.put(newNode, newCost);
+                    unvisited.add(newNode);
                 }
-
-                final Position2D neighbour = position.move(newDirection);
-                if (!heatLossMap.containsKey(neighbour)) {
-                    continue;
-                }
-
-                final int newDirectionCount =
-                        newDirection == node.direction() ? node.directionCount() + 1 : 1;
-
-                final GraphNode newNode = new GraphNode(neighbour, newDirection, newDirectionCount);
-                if (visited.contains(newNode)) {
-                    continue;
-                }
-
-                final long newCost = heatLossMap.get(neighbour) + cost.get(node);
-                final Long existingCost = cost.get(newNode);
-                if (existingCost != null && existingCost < newCost) {
-                    continue;
-                }
-
-                cost.put(newNode, newCost);
-                unvisited.add(newNode);
             }
         }
 
         throw new RuntimeException("No path found to " + end);
     }
 
-    private record GraphNode(Position2D position, Direction direction, int directionCount) {}
+    private record GraphNode(Position2D position, Direction direction) {}
 }
